--- a/src/index.css
+++ b/src/index.css
@@ -17,10 +17,61 @@
 	padding: 0;
 }
 
+html {
+	scrollbar-width: thin;
+	scrollbar-color: #888 #f1f1f1;
+}
+
+/* For Microsoft Edge */
+body {
+	scrollbar-width: thin;
+	scrollbar-color: var(--secondary-color) #f1f1f1;
+}
+
+section {
+	padding: 6.25rem 0;
+	text-align: center;
+}
+
 .container {
 	max-width: 1400px;
 	margin: 0 auto;
 	padding: 0 20px;
+}
+
+::-webkit-scrollbar {
+	width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: var(--secondary-color);
+	border-radius: 6px;
+}
+
+::-webkit-scrollbar-track {
+	background-color: #f1f1f1;
+}
+
+
+h2 {
+	font-size: 2.5rem;
+	font-weight: 700;
+	font-family: var(--titles-font);
+}
+
+h3 {
+	font-size: 1.7rem;
+	font-weight: 500;
+	color: var(--primary-color);
+	font-family: var(--titles-font);
+}
+
+p {
+	color: var(--gray-color);
+	max-width: 600px;
+	line-height: 1.4;
+	font-family: var(--text-font);
+	font-weight: lighter;
 }
 
 .debug {
