--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
 
 	/* font-family */
-	--titles-font: "Poppins", sans-serif;
+	--title-font: "Poppins", sans-serif;
 	--text-font: "Rubik", sans-serif;
 
 	/* colors */
@@ -56,14 +56,14 @@ section {
 h2 {
 	font-size: 2.5rem;
 	font-weight: 700;
-	font-family: var(--titles-font);
+	font-family: var(--title-font);
 }
 
 h3 {
 	font-size: 1.7rem;
 	font-weight: 500;
 	color: var(--primary-color);
-	font-family: var(--titles-font);
+	font-family: var(--title-font);
 }
 
 p {
