--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,15 @@ section {
 	padding: 0 20px;
 }
 
+.HeadSection {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	gap: 1.5rem;
+}
+
 ::-webkit-scrollbar {
 	width: 8px;
 }
